Add responsive layout for desktop

--- a/index.html
+++ b/index.html
@@ -6,19 +6,40 @@
     <title>Responsive Web Development</title>
     <link rel="stylesheet" href="/assets/fonts/font-faces.css">
     <link rel="stylesheet" href="/assets/css/core-styles.css">
+    <link rel="stylesheet" href="/assets/css/layout.css">
 </head>
 <body>
-    <h1 class="hero__heading">FIND CLOTHES THAT MATCHES YOUR STYLE</h1>
-    <p class="hero__paragraph">Browse through our diverse range of meticulously crafted garments, designed to bring out your individuality and cater to your sense of style.</p>
-    <a href="#" class="hero__button">Shop Now</a>
-    <div class="hero__stat-number">200+</div>
-    <div class="hero__stat-subtitle">International Brands</div>
-    <div class="hero__stat-number">2,000+</div>
-    <div class="hero__stat-subtitle">High-Quality Products</div>
-    <div class="hero__stat-number">30,000+</div>
-    <div class="hero__stat-subtitle">Happy Customers</div>
-    <img class="hero__icon-small-star" src="assets/icons/small-star.svg">
-    <img class="hero__icon-big-star" src="assets/icons/big-star.svg">
-    <img class="hero__image" src="/assets/images/hero-section/cropped-hero-image.png" alt="Models wearing shop.co clothing">
+    <section class="hero">
+        <div class="container hero__inner">
+            <div class="hero__left">
+                <div class="hero__top-left">
+                    <h1 class="hero__heading">FIND CLOTHES THAT MATCHES YOUR STYLE</h1>
+                    <p class="hero__paragraph">Browse through our diverse range of meticulously crafted garments, designed to bring out your individuality and cater to your sense of style.</p>
+                    <a href="#" class="hero__button">Shop Now</a>
+                </div>
+                <div class="hero__stats">
+                    <div class="hero__stat">
+                        <div class="hero__stat-number">200+</div>
+                        <div class="hero__stat-subtitle">International Brands</div>
+                    </div>
+                    <div class="hero__stat-divider"></div>
+                    <div class="hero__stat">
+                        <div class="hero__stat-number">2,000+</div>
+                        <div class="hero__stat-subtitle">High-Quality Products</div>
+                    </div>
+                    <div class="hero__stat-divider"></div>
+                    <div class="hero__stat">
+                        <div class="hero__stat-number">30,000+</div>
+                        <div class="hero__stat-subtitle">Happy Customers</div>
+                    </div>
+                </div>
+            </div>
+            <div class="hero__right">
+                <img class="hero__icon-small-star" src="assets/icons/small-star.svg">
+                <img class="hero__icon-big-star" src="assets/icons/big-star.svg">
+                <img class="hero__image" src="/assets/images/hero-section/cropped-hero-image.png" alt="Models wearing shop.co clothing">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
